--- a/less/index.less
+++ b/less/index.less
@@ -1,12 +1,14 @@
 
-
-@import "reset.less";
+@import "variable.less";
 @import "mixins.less";
+@import "reset.less";
+@import "global.less";
+
 
 @import "wrapper.less";
 @import "nav.less";
 @import "homePage.less";
 @import "mediaQuaries.less";
 @import "features.less";
-@import "contactUs";
-@import "footer";
+@import "contactUs.less";
+@import "footer.less";
