--- a/less/mixins.less
+++ b/less/mixins.less
@@ -6,3 +6,16 @@
     justify-content: center;
     flex-direction: column;
 }
+
+//color mixins
+.overall-background-color() {
+    background: linear-gradient(0deg, #F4F4F4 3.67%, #DFDEDC 98.35%);
+    mix-blend-mode: normal;
+    opacity: 0.5;
+}
+
+.navBanner-background-color() {
+    background: linear-gradient(180deg, #C8C9D1 0%, #AAAFB7 98.53%);
+    mix-blend-mode: normal;
+    opacity: 0.76;
+}
