--- a/less/contactUs.less
+++ b/less/contactUs.less
@@ -7,21 +7,11 @@
     .for-phone-only();
    
     p {
-        font-weight: 500;
-        // font-size: 87.5%;
         font-size: 1.4rem;
-        line-height: 16px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        letter-spacing: 1.75px;
-
+        line-height: 1.6rem;
+        letter-spacing: 0.175rem;
         margin: 5% 0;
-
-
-        color: #747E80;
         width: 50%;
-        text-align: center;
     }
 
 
@@ -48,72 +38,60 @@
     h2 {
         font-weight: 900;
         font-size: 4.4rem;
-        // font-size: 44px;
-        line-height: 114%;
-        /* identical to box height, or 50px */
-
+        line-height: 5rem;
         margin-bottom: -3%;
 
         display: flex;
         align-items: center;
         text-align: center;
-        letter-spacing: -0.244444px;
-
-        color: #2F2F2F;
+        letter-spacing: -0.0244444rem;
+        color: @ldark-charcoal;
     }
 
     .usersInfo {
         display: flex;
         align-items: center;
         justify-content: space-around;
-
         width: 60%;
         margin-bottom: 3%;
 
-
         input {
-            max-width: 180px;
-            // height: 50px;
+            max-width: 18rem;
             padding: 2%;
-            border-radius: 40px;
+            border-radius: 4rem;
         }
 
         ::placeholder {
-            width:  138px;
+            width:  13.8rem;
             font-weight: 500;
             font-size: 1.4rem;
             line-height: 16px;
             display: flex;
             align-items: flex-end;
-
-            color: #303234;
-
+            color: @cod-grey;
             mix-blend-mode: normal;
             opacity: 0.7;
         }
 
         button {
-            background: #FFEB38;
-            border-radius: 40px;
-
-            max-width: 210px;
+            background: @yellow;
+            border-radius: 4rem;
+            max-width: 21rem;
             padding: 2%;
-
             box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.198681);
-
             font-weight: bold;
             font-size: 1.4rem;
-            line-height: 16px;
+            line-height: 1.6rem;
             display: flex;
             align-items: flex-end;
             justify-content: center;
             text-align: center;
-            letter-spacing: 1.75px;
-
-            color: #000000;
+            letter-spacing: 0.175rem;
+            color: @black;
         }
 
         @media (min-width: 320px) and (max-width: 639px) {
+            
             flex-direction: column;
             input {
                 margin: 2% 0;
@@ -123,7 +101,9 @@
             }
         }
     }
+
     @media (min-width: 415px) and (max-width: 639px) {
+        
         h2 {
             font-size: 4rem;
         }
@@ -131,7 +111,9 @@
             width: 90%;
         }
     }
+   
     @media (min-width: 320px) and (max-width: 414px) {
+        
         h2 {
             font-size: 3rem;
         }
