--- a/less/nav.less
+++ b/less/nav.less
@@ -1,18 +1,9 @@
 
 .section1 {
-    // background-color: blue;
-
-    background: linear-gradient(180deg, #C8C9D1 0%, #AAAFB7 98.53%);
-    mix-blend-mode: normal;
-    opacity: 0.76;
-
-    .my-flex-container();
-    
-
-    width: 100%;
 
     header {
-        margin-top: 4%;
+        margin: 3% 0;
+
         display: flex;
         align-items: center;
         justify-content: center;
@@ -35,7 +26,7 @@
                 width: 20%;
                
                 img {
-                    background-color: #000000;
+                    background-color: @black;
                     width: 25%;
                     height: auto;
                 }
@@ -52,18 +43,9 @@
                     margin: 0 2%;
                     
                     a {
-                        text-decoration: none;
+                        // display: flex;
+                        // align-items: center;
                         
-                        font-weight: 600;
-                        font-size: 1.8rem;
-                        line-height: 14px;
-
-                        display: flex;
-                        align-items: center;
-                        letter-spacing: 2px;
-
-                        color: black;
-
                         @media (min-width: 320px) and (max-width: 639px) {
                             font-size: 1.5rem;
                             letter-spacing: 1px;
