--- a/less/homePage.less
+++ b/less/homePage.less
@@ -75,7 +75,7 @@
                     margin-top: 20%;
 
                     img {
-                        width: 30%;
+                        min-width: 30%;
                         height: auto;
                     }
                 }         
@@ -187,5 +187,6 @@ main {
             //     display: none;
             // }
         }
+       
     }
 }
