--- a/less/nav.less
+++ b/less/nav.less
@@ -47,8 +47,8 @@
                         // align-items: center;
                         
                         @media (min-width: 320px) and (max-width: 639px) {
-                            font-size: 1.5rem;
-                            letter-spacing: 1px;
+                            font-size: 1.3rem;
+                            letter-spacing: 0.05rem;
                         }
                     }                  
                 }
