--- a/less/features.less
+++ b/less/features.less
@@ -37,6 +37,7 @@ main {
                 
                 h2 {
                     font-size: 2.5rem;
+                    line-height: 3rem;
                 }
             }
         }
